# Kartezio

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SLURM_al_sampling_random.sh  SLURM_al_sampling_restart.sh  SLURM_al_sampling_roulette.sh  SLURM_al_sampling_roulette_good.sh  SLURM_cgp_ensemble.sh  SLURM_cgp_sampling.sh  SLURM_cgp_trad.sh  SLURM_dis_camelyon.sh  SLURM_dis_cellpose.sh  SLURM_rnd_camelyon.sh  SLURM_rnd_cellpose.sh  TODO.txt  UncertaintyLatexify.py  al_sampling.py  al_sampling_aug.py  al_sampling_mu.py  al_sampling_oneplus.py  al_sampling_random.sh  al_sampling_random_par.py  al_sampling_restart.sh  al_sampling_roulette.sh  al_sampling_roulette_good.sh  camelyon.py  camelyon_patches.py  cellpose.py  cellpose_mu.py  cellpose_oneplus.py  cgp.py  cgp_camelyon.sh  cgp_cellpose.sh  cgp_kartezio.yml  cgp_sampling.sh  config_cgp.yml  config_cgp_ensemble.yml  config_cgp_trad.yml  config_dis_camelyon.yml  (+46 more)
.github/workflows/: dev-workflow.yml  master-workflow.yml
SLURMs/: CHDB-INTERRUPTION.txt  SLURM_cgp_models.sh  SLURM_cgp_models_1.sh  SLURM_cgp_models_10.sh  SLURM_cgp_models_15.sh  SLURM_cgp_models_5.sh  SLURM_cgp_models_easy.sh  SLURM_cgp_models_hard.sh  SLURM_cgp_models_rnd10.sh  SLURM_rnd_models.sh  SLURM_rnd_models_1.sh  SLURM_rnd_models_10.sh  SLURM_rnd_models_15.sh  SLURM_rnd_models_15_par.sh  SLURM_rnd_models_5.sh  SLURM_uncertanty_models.sh  SLURM_uncertanty_models_10.sh  SLURM_uncertanty_models_15.sh  SLURM_uncertanty_models_2.sh  SLURM_uncertanty_models_5.sh  SLURM_uncertanty_weighted_models.sh  SLURM_uncertanty_weighted_models_10.sh  SLURM_uncertanty_weighted_models_15.sh  SLURM_uncertanty_weighted_models_2.sh  SLURM_uncertanty_weighted_models_5.sh
configs/: config_cgp_10_gen_100_nmodels_1.yml  config_cgp_easy_gen_100_nmodels_1.yml  config_cgp_gen_100_nmodels_1.yml  config_cgp_gen_100_nmodels_10.yml  config_cgp_gen_100_nmodels_15.yml  config_cgp_gen_100_nmodels_5.yml  config_cgp_gen_10_nmodels_1.yml  config_cgp_gen_10_nmodels_10.yml  config_cgp_gen_10_nmodels_15.yml  config_cgp_gen_10_nmodels_5.yml  config_cgp_hard_gen_100_nmodels_1.yml  config_cgp_rnd10_gen_100_nmodels_1.yml  config_random_gen_100_nmodels_1.yml  config_random_gen_100_nmodels_10.yml  config_random_gen_100_nmodels_15.yml  config_random_gen_100_nmodels_15_par.yml  config_random_gen_100_nmodels_5.yml  config_random_gen_10_nmodels_1 .yml  config_random_gen_10_nmodels_1.yml  config_random_gen_10_nmodels_10.yml  config_random_gen_10_nmodels_15.yml  config_random_gen_10_nmodels_5 .yml  config_random_gen_10_nmodels_5.yml  config_uncertainty_gen_100_nmodels_10.yml  config_uncertainty_gen_100_nmodels_15.yml  config_uncertainty_gen_100_nmodels_2.yml  config_uncertainty_gen_100_nmodels_5.yml  config_uncertainty_gen_10_nmodels_10 .yml  config_uncertainty_gen_10_nmodels_10.yml  config_uncertainty_gen_10_nmodels_15 .yml  config_uncertainty_gen_10_nmodels_15.yml  config_uncertainty_gen_10_nmodels_2 .yml  config_uncertainty_gen_10_nmodels_2.yml  config_uncertainty_gen_10_nmodels_5 .yml  config_uncertainty_gen_10_nmodels_5.yml  config_uncertainty_weighted_gen_100_nmodels_10.yml  config_uncertainty_weighted_gen_100_nmodels_15.yml  config_uncertainty_weighted_gen_100_nmodels_2.yml  config_uncertainty_weighted_gen_100_nmodels_5.yml  config_uncertainty_weighted_gen_10_nmodels_10 .yml  (+10 more)
scripts/: al_cgp_nmodels.sh  al_cgp_nmodels_1.sh  al_cgp_nmodels_10.sh  al_cgp_nmodels_15.sh  al_cgp_nmodels_5.sh  al_cgp_nmodels_easy.sh  al_cgp_nmodels_hard.sh  al_cgp_nmodels_rnd10.sh  al_random_nmodels.sh  al_random_nmodels_1.sh  al_random_nmodels_10.sh  al_random_nmodels_15.sh  al_random_nmodels_15_par.sh  al_random_nmodels_5.sh  al_uncertainty_nmodels.sh  al_uncertainty_nmodels_10.sh  al_uncertainty_nmodels_15.sh  al_uncertainty_nmodels_2.sh  al_uncertainty_nmodels_5.sh  al_uncertainty_weighted_nmodels.sh  al_uncertainty_weighted_nmodels_10.sh  al_uncertainty_weighted_nmodels_15.sh  al_uncertainty_weighted_nmodels_2.sh  al_uncertainty_weighted_nmodels_5.sh  al_uncertainty_weigthed_nmodels_10.sh  al_uncertainty_weigthed_nmodels_15.sh  al_uncertanty_nmodels_10.sh  al_uncertanty_nmodels_15.sh  al_uncertanty_nmodels_2.sh  al_uncertanty_nmodels_5.sh  al_uncertanty_weigthed_nmodels_10.sh  al_uncertanty_weigthed_nmodels_15.sh  al_uncertanty_weigthed_nmodels_2.sh  al_uncertanty_weigthed_nmodels_5.sh  dev.py
src/kartezio/: __init__.py  activeLearning.py  callback.py  easy.py  export.py  helpers.py  mutation.py  population.py  preprocessing.py  readers.py  strategy.py  training.py  types.py
src/kartezio/apps/: instance_segmentation_mu.py
src/kartezio/core/: components.py  endpoints.py  fitness.py  initialization.py  reducer.py
src/kartezio/data/: dataset.py
src/kartezio/evolution/: base.py  decoder.py  population.py
src/kartezio/model/: base.py  builder.py
src/kartezio/mutation/: base.py  decay.py  effect.py
src/kartezio/primitives/: matrix.py  scalar.py
src/kartezio/utils/: directory.py  viewer.py
src/kartezio/vision/: common.py
tests/: test_core_components.py  test_integration.py  test_runner.py  test_security.py
tests/components/: test_endpoint.py  test_library.py  test_reader.py
tmpdir/: raw_test_data.txt
tmpdir_5only_lex_mu/: raw_test_data.txt
tmpdir_5only_mu/: raw_test_data.txt
tmpdir_5only_oneplus/: raw_test_data.txt
tmpdir_lex_mu/: raw_test_data.txt
tmpdir_mu/: elite_run_-143_gen_1_model_0.json  elite_run_-143_gen_1_model_1.json  elite_run_-14_gen_1_model_1.json  elite_run_-14_gen_4_model_1.json  elite_run_-1_gen_15_model_0.json  elite_run_-1_gen_1_model_0.json  raw_test_data.txt
tmpdir_rnd10_oneplus/: raw_test_data.txt
